# rs-terrarium

./: Cargo.toml  README.md  terrarium.asc  terrarium.list  terrarium.service
.cargo/: config  config.toml
.github/workflows/: build.yml  lint.yml  release.yml
assets/: terrarium.service
assets/grafana/: influxdb.yaml  terrarium.json  terrarium.yaml
debian/dists/trixie/: InRelease  Release  Release.gpg
debian/dists/trixie/stable/binary-arm64/: Packages  Packages.bz2  Release
debian/dists/trixie/stable/binary-armhf/: Packages  Packages.bz2  Release
debian/pool/trixie/stable/t/terrarium/: terrarium_0.1.11-1_arm64.deb  terrarium_0.1.11-1_armhf.deb
docs/: repository.md
src/: lib.rs  main.rs  settings.rs  weather.rs
src/actor/: dummy.rs  gpio_relay.rs  mod.rs
src/sensor/: bme280.rs  influxdb.rs  ingics.rs  mod.rs
