[package]
name = "terrarium"
version = "0.1.4"
edition = "2021"

authors = ["Philipp Marmet  <fujexo@c0d3.ch>"]
description = "Binary package for controlling various components of a *arium"
readme = "README.md"
repository = "https://github.com/fujexo/rs-terrarium"
license-file = "LICENSE.txt"
keywords = [""]
categories = [""]

[dependencies]
chrono = { default-features = false, version = "0.4.38" }
config = { default-features = false, version = "0.14.1", features = ["yaml"] }
serde = { default-features = false, version = "1.0.215" }
serde_derive = "1.0.215"
log = "0.4.22"
env_logger = { default-features = false, version = "0.11.5" }
rppal = "0.19.0"
ingics = { version = "0.1.2", features = ["influxdb"] }
futures = { default-features = false, version = "0.3" }
bluer = { default-features = false, version = "0.17.3", features = [
  "bluetoothd",
] }
tokio = { default-features = false, version = "1" }
influxdb = { default-features = false, version = "0.7.2", features = [
  "reqwest-client-rustls",
] }
clap = { default-features = false, version = "4.5.20", features = [
  "std",
  "derive",
  "help",
] }
sunrise-sunset-calculator = "1.0.1"

[dev-dependencies]
mockall = "0.13.0"
cargo-deb = "2.8.0"

[package.metadata.cross.build]
default-target = "armv7-unknown-linux-gnueabihf"
pre-build = [
  "dpkg --add-architecture armhf",
  "apt-get update && apt-get install --assume-yes libdbus-1-dev libdbus-1-dev:armhf pkg-config",
]

[package.metadata.cross.build.env]
passthrough = ["RUSTFLAGS"]

[package.metadata.deb]
depends = "dbus, influxdb, grafana"
assets = [
  [
    "target/release/terrarium",
    "/usr/bin/terrarium",
    "775",
  ],
  [
    "assets/terrarium.service",
    "/lib/systemd/system/terrarium.service",
    "755",
  ],
  [
    "assets/grafana/influxdb.yaml",
    "/etc/grafana/provision/datasources/influxdb.yaml",
    "755",
  ],
  [
    "assets/grafana/terrarium.yaml",
    "/etc/grafana/provision/dashboards/terrarium.yaml",
    "755",
  ],
  [
    "assets/grafana/terrarium.json",
    "/etc/grafana/dashboards/terrarium.json",
    "755",
  ],
]
